# TmuxRunner

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  TmuxRunner.kdev4  install-user.sh  install.sh
.kdev4/: TmuxRunner.kdev4
src/: CMakeLists.txt  plasma-runner-tmuxrunner.desktop  tmuxrunner.cpp  tmuxrunner.h
src/config/: plasma-runner-tmuxrunner_config.desktop  tmuxrunner_config.cpp  tmuxrunner_config.h  tmuxrunner_config.ui
src/core/: TmuxRunnerAPI.cpp  TmuxRunnerAPI.h
src/runner/: plasma-runner-tmuxrunner.desktop  tmuxrunner.cpp  tmuxrunner.h  tmuxrunner.json
